# BoostAsio-Threadpool

./: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  CMakeLists.txt.back  CServerStart.cpp  CServerStart.h  ConfigMgr.cpp  ConfigMgr.h  Connectdb.cpp  Connectdb.h  Content.qml  Controler.js  Firstlogin.qml  HttpConnection.cpp  HttpConnection.h  HttpMgr.cpp  HttpMgr.h  LogicSystem.cpp  LogicSystem.h  Main.qml  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  README.md  RedisMgr.cpp  RedisMgr.h  Register.qml  ServerLogin.cpp  ServerLogin.h  ServerRegister.cpp  ServerRegister.h  ServereMain.qml  Singleton.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  VerifyGrpcClitnt.cpp  VerifyGrpcClitnt.h  Window.qml  base64_code.cpp  (+45 more)
Document/: REDME: Terminal & QtApp Switch.txt  开发文档.odt
VarifyServer/: config.js  config.json  email.js  package-lock.json  package.json  proto.js  redis.js  server.js
